--- a/src/main/resources/pages/projects.yml
+++ b/src/main/resources/pages/projects.yml
@@ -2,31 +2,15 @@ name: "Projects"
 components:
   projects:
     status: enable
-    type: "row_video"
+    type: "card_modal"
     title: "Mes Projets"
     subtitle: "Des clips musicaux aux courts-métrages, découvrez ma diversité créative"
-    videos:
+    cards:
       1:
-        url: "https://2050today.org/wp-content/uploads/2020/07/Video-Placeholder.mp4?_=6"
-        poster: "https://placehold.co/896x504/286CAF/FFF?text=Showreel"
-      2:
-        url: "https://2050today.org/wp-content/uploads/2020/07/Video-Placeholder.mp4?_=6"
-        poster: "https://placehold.co/896x504/286CAF/FFF?text=Showreel"
-      3:
-        url: "https://2050today.org/wp-content/uploads/2020/07/Video-Placeholder.mp4?_=6"
-        poster: "https://placehold.co/896x504/286CAF/FFF?text=Showreel"
-      4:
-        url: "https://2050today.org/wp-content/uploads/2020/07/Video-Placeholder.mp4?_=6"
-        poster: "https://placehold.co/896x504/286CAF/FFF?text=Showreel"
-      5:
-        url: "https://2050today.org/wp-content/uploads/2020/07/Video-Placeholder.mp4?_=6"
-        poster: "https://placehold.co/896x504/286CAF/FFF?text=Showreel"
-      6:
-        url: "https://2050today.org/wp-content/uploads/2020/07/Video-Placeholder.mp4?_=6"
-        poster: "https://placehold.co/896x504/286CAF/FFF?text=Showreel"
-      7:
-        url: "https://2050today.org/wp-content/uploads/2020/07/Video-Placeholder.mp4?_=6"
-        poster: "https://placehold.co/896x504/286CAF/FFF?text=Showreel"
-      8:
-        url: "https://2050today.org/wp-content/uploads/2020/07/Video-Placeholder.mp4?_=6"
-        poster: "https://placehold.co/896x504/286CAF/FFF?text=Showreel"
+        poster: "https://placehold.co/896x504/286CAF/FFF?text=Local+File"
+        title: "Ad haec permittunt innumeram eventu"
+        modal:
+          video:
+            type: youtube
+            url: "https://www.youtube.com/embed/M6SsZovFEsk?autoplay=1"
+          description: "Dum haec in oriente aguntur, Arelate hiemem agens Constantius post theatralis ludos atque circenses ambitioso editos apparatu diem sextum idus Octobres, qui imperii eius annum tricensimum terminabat, insolentiae pondera gravius librans, siquid dubium deferebatur aut falsum, pro liquido accipiens et conperto, inter alia excarnificatum Gerontium Magnentianae comitem partis exulari maerore multavit."
